# trading-sto

./: .env.example  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.web  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy.yml
.turbo/cache/: e47813224b36bc03-meta.json
apps/backend/: Cargo.toml  package.json  wrangler.toml
apps/backend/notebooklm_docs/: architecture_summary.md  detailed_code_analysis.md  smart_guidelines.md
apps/backend/src/: config.rs  main.rs
apps/backend/src/api/: auth.rs  challenge.rs  mod.rs  protected.rs  ws.rs
apps/backend/src/db/: mod.rs
apps/backend/src/middleware/: auth.rs
apps/backend/src/models/: mod.rs  token.rs  user.rs
apps/backend/src/services/: auth_service.rs  mod.rs  ws_service.rs
apps/backend/src/utils/: crypto.rs  mod.rs
apps/web/: .gitignore  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json  wrangler.toml
apps/web/.open-next/.build/: cache.cjs  open-next.config.edge.mjs  open-next.config.mjs
apps/web/.open-next/.build/durable-objects/: bucket-cache-purge.js  queue.js  sharded-tag-cache.js
apps/web/.open-next/assets/: BUILD_ID
apps/web/.open-next/cache/EvIlzZTcP992LrWN13QCm/: 500.cache
apps/web/.open-next/cloudflare/: cache-assets-manifest.sql  init.js
apps/web/.open-next/dynamodb-provider/: dynamodb-cache.json
apps/web/.open-next/middleware/: handler.mjs  open-next.config.mjs
apps/web/.wrangler/tmp/bundle-o5fbzP/: middleware-insertion-facade.js  middleware-loader.entry.ts
apps/web/messages/: en-US.json  vi-VN.json
apps/web/notebooklm_docs/: WalletConnect.md  architecture_summary.md  detailed_code_analysis.md  smart_guidelines.md
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx
apps/web/src/app/(main)/auth/v2/: layout.tsx
apps/web/src/app/(main)/dashboard/: layout.tsx
apps/web/src/app/(main)/unauthorized/: page.tsx
apps/web/src/config/: app-config.ts  wagmi-config.ts
apps/web/src/data/: users.ts
apps/web/src/i18n/: request.ts
apps/web/src/middleware/: auth-middleware.ts
apps/web/src/stores/preferences/: preferences-provider.tsx  preferences-store.ts
apps/web/src/stores/rainbow/: rainbow-provider.tsx
apps/web/src/types/preferences/: locale.ts
docs/: api.md  architecture.md  compliance.md
infra/: terraform.yml
infra/kubernetes/: deployment.yaml  ingress.yaml  service.yaml
infra/monitoring/: grafana-dashboard.yaml
shared/: types.proto
smart-contracts/: TradingToken.sol
(+57 files in other folders)
