[package]
name = "trading-sto-backend"
version = "0.1.0"
edition = "2021"
default-run = "trading-sto-backend"

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
ethers = "2"
serde = "1.0.219"
futures = "0.3.31"
rand = "0.9.2"
time = "0.3.41"
chrono = "0.4.41"
actix = "0.13.5"
actix-web-actors = "4.3.1"
serde_json = "1.0.142"
log = "0.4.27"
dotenvy = "0.15.7"
env_logger = "0.11.8"

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
hex = "0.4"